# python-piscine

ex01/: format_ft_time.py
ex02/: find_ft_type.py  py_piscine_ex02.ipynb
ex04/: whatis.py
ex05/: building.py  py_piscine_ex05.ipynb
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: README.md  py_piscine_ex09.ipynb  tester.py
ex09/maths_operations.egg-info/: SOURCES.txt  top_level.txt
knowledge-analysis/: python-analysis.md  python-analysis.rtf
piscine-00/ex00/: py_piscine_ex00.ipynb
piscine-00/ex01/: py_piscine_ex01.ipynb
piscine-00/ex03/: NULL_not_found.py  py_piscine_ex03.ipynb
piscine-00/ex04/: py_piscine_ex04.ipynb
piscine-00/ex06/: filterstring.py  py_piscine_ex06.ipynb
piscine-00/ex07/: sos.py
piscine-00/ex08/: py_piscine_ex08.ipynb  tester.py
piscine-00/ex09/: pyproject.toml  setup.py
piscine-00/ex09/maths_op.egg-info/: PKG-INFO  SOURCES.txt
piscine-00/ex09/maths_operations.egg-info/: PKG-INFO
