[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maths_op"
version = "0.1.0"
description = "A collection of utility functions for lists"
readme = "README.md"
authors = [{ name = "Maaz Khan", email = "maazkhan7454@gmail.com" }]
license = { text = "MIT" }
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/maaz-codes/python-piscine/tree/master/ex09/maths_op"